<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backGroundGray"
        tools:context=".activity.LoginActivity">

    <TextView
            android:id="@+id/account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/loginAccount"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="150dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
    />

    <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/password"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/account"
    />

    <EditText
            android:id="@+id/accountInput"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center"
            android:background="@color/white"
            android:hint="@string/loginAccountHint"
            android:layout_marginLeft="30dp"
            app:layout_constraintLeft_toRightOf="@+id/account"
            app:layout_constraintBottom_toBottomOf="@+id/account"
            app:layout_constraintTop_toTopOf="@+id/account"
    />

    <EditText
            android:id="@+id/passwordInput"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center"
            android:background="@color/white"
            android:hint="@string/passwordHint"
            android:layout_marginLeft="30dp"
            app:layout_constraintLeft_toRightOf="@+id/password"
            app:layout_constraintBottom_toBottomOf="@+id/password"
            app:layout_constraintTop_toTopOf="@+id/password"

    />

    <Button
            android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"
            android:padding="10dp"
            android:text="@string/login"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
    />

    <Button
            android:id="@+id/buttonRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"
            android:padding="10dp"
            android:text="@string/register"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
    />

    <Button
            android:id="@+id/buttonHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"
            android:padding="10dp"
            android:text="@string/goHome"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
    />

</androidx.constraintlayout.widget.ConstraintLayout>