<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backGroundGray"
        tools:context=".activity.TerminalRegisterActivity">

    <Button
            android:id="@+id/buttonHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"
            android:padding="10dp"
            android:text="@string/goHome"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
    />

    <Button
            android:id="@+id/buttonRegisterTerminal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"
            android:padding="10dp"
            android:text="@string/register"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
    />

    <TextView
            android:id="@+id/terminalName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/terminalName"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonHome"
    />

    <TextView
            android:id="@+id/terminalTopic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/terminalTopic"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/terminalName"
    />

    <EditText
            android:id="@+id/terminalNameInput"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center"
            android:background="@color/white"
            android:textStyle="italic"
            android:hint="@string/terminalNameInputHint"
            android:layout_marginLeft="30dp"
            app:layout_constraintLeft_toRightOf="@+id/terminalName"
            app:layout_constraintBottom_toBottomOf="@+id/terminalName"
    />

    <EditText
            android:id="@+id/terminalTopicInput"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center"
            android:background="@color/white"
            android:textStyle="italic"
            android:hint="@string/terminalTopicInputHint"
            android:layout_marginLeft="30dp"
            app:layout_constraintLeft_toRightOf="@+id/terminalTopic"
            app:layout_constraintBottom_toBottomOf="@+id/terminalTopic"
    />


</androidx.constraintlayout.widget.ConstraintLayout>